--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,11 @@
-streamlit
-pandas
-gspread
-oauth2client
-matplotlib
-seaborn
-wordcloud
-openpyxl
-scikit-learn
-transformers
-torch
-qrcode[pil]
-Pillow
-streamlit
+streamlit>=1.24
 pandas
 numpy
 plotly
-wordcloud
 matplotlib
+wordcloud
 transformers
 torch
 Sastrawi
 streamlit-option-menu
 statsmodels
-
