--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 streamlit
 pandas
-gspread
-google-auth-oauthlib
-torch
+numpy
 transformers
-wordcloud
+torch
 plotly
-scikit-learn
-nltk
+gspread
+google-auth
