--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-streamlit>=1.24
-pandas
-numpy
-plotly
-matplotlib
-wordcloud
-transformers
-torch
-Sastrawi
-streamlit-option-menu
-statsmodels
-
+streamlit>=1.35
+pandas>=2.1
+numpy>=1.26
+plotly>=5.22
+matplotlib>=3.8
+wordcloud>=1.9
+transformers>=4.40
+torch>=2.2
+sastrawi>=1.0.1
+statsmodels>=0.14
